checkpolicy/tests/negative/unknown_type.te
module unknown_type 1.0;

require {
	type foo_t;
	class file { read };
}

allow foo_t undeclared_t:file read;
